--- a/src/Components /Movie/movie.css
+++ b/src/Components /Movie/movie.css
@@ -1,5 +1,93 @@
+.choose-movies {
 
-.movie {
+    width: 100%;
+    height: 100vh;
+}
 
-    background-color: lightblue;
+.choose-movies header {
+
+    width: 100%;
+    height: 10%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #C3CFD9;
+}
+
+.choose-movies header h1 {
+    
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 34px;
+    line-height: 40px;
+    color: #E8833A;
+}
+
+.choose-movies .title {
+
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.choose-movies .title h1 {
+
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: 0.04em;
+    color: #293845;
+}
+
+/* --------------------------------------------------- */
+
+.movies-container {
+
+    width: 100%;
+    height: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.movies-contents {
+
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.box-movie {
+
+    width: 40%;
+    height: 25%;
+
+    margin-bottom: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
+}
+
+.box-movie img {
+
+    width: 100%;
+    height: 100%;
+}
+
+.box-movie:hover {
+    cursor: pointer;
+}
+
+@media (min-width: 600px) {
+
+    .movies-contents {
+        width: 40%;
+        height: 150%;
+    }
 }
