--- a/src/Components /Success/success.css
+++ b/src/Components /Success/success.css
@@ -31,7 +31,6 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
 }
 
@@ -57,4 +56,39 @@
     line-height: 26px;
     letter-spacing: 0.04em;
     color: #293845;
+}
+
+.btn-back {
+
+    width: 100%;
+    height: 20%;
+
+    display: flex;  
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-back button {
+    
+    width: 225px;
+    height: 42px;
+    margin-top: 100px;
+
+    background: #E8833A;
+    border-radius: 3px;
+    cursor: pointer;
+    
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+}
+
+@media (min-width: 600px) {
+
+    .success-container h1 {
+        margin-top: 2%;
+    }
 }
